fix style tag error

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document Title</title>
     <style>
         body {
-            background: #123456;
+            background-color: #123456;
         }
     </style>
 
