--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Test Title</title>
+    <title>Test Titlez</title>
     <style>
         body {
             background-color: #123456;
