change gb color

--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <title>Document Fix</title>
     <style>
         body {
-            background-color: #1234e6;
+            background-color: #1a34e6;
         }
     </style>
 
 </head>
 <body>
     <h3>WRONG Header</h3>
-    <a href="https://www.apple.com"><img src="../../Sample%20HTML/red-key.png"></a>
+    <a href="https://www.apple.com"><img src="./red-key.png"></a>
 </body>
 </html>
