update image name

--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
 </head>
 <body>
     <h3>Orchestration</h3>
-    <a href="https://www.opensource.guide"><img src="./container.png"></a>
+    <a href="https://www.opensource.guide"><img src="container.png"></a>
 </body>
 </html>
